<resources>
    <string name="app_name">BMICalc</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="calculateBMI">Calculate</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">KILL EVIL VIRUS</string>
    <string name="gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmi">BMI</string>
    <string name="calories">Calories</string>
    <string name="recipes">Show sample recipe</string>
    <string name="description">Description</string>
    <string name="rice">Rice [g]</string>
    <string name="chicken">Chicken [g]</string>
    <string name="vegetables">Vegetables</string>
    <string name="dessert">Dessert</string>
    <string name="unlimited">Unlimited</string>
    <string name="toiletPaper">Toilet Paper</string>
    <string name="start">Start again</string>
    <string name="bmi_button">Fitness</string>
    <string name="chart_button">Statistics</string>
    <string name="game_button">Play game</string>
    <string name="back">Back</string>

    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>

    <string name="covid">COVID-19</string>
    <string name="play">Tap to Play</string>
    <string name="highscore">Highscore</string>


</resources>
