<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavActivity">

    <Button
        android:id="@+id/chartButton"
        android:layout_width="209dp"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_selector"
        android:text="@string/chart_button"
        app:layout_constraintStart_toStartOf="@+id/bmiButton"
        app:layout_constraintTop_toBottomOf="@+id/bmiButton" />

    <Button
        android:id="@+id/bmiButton"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/button_selector"
        android:text="@string/bmi_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="213dp"
        android:layout_height="74dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_selector"

        android:text="@string/game_button"
        app:layout_constraintStart_toStartOf="@+id/chartButton"
        app:layout_constraintTop_toBottomOf="@+id/chartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>